schema/testdata/validation_duplicate_relationship_inputs/schema.keel
model Post {
    fields {
        name Text?
        blog Blog?
    }

    actions {
        create create() with (name, blog.name)
        create createDups() with (blog.name, blog.name)

        list list(name, blog.name)
        list listDups(blog.name, blog.name)
    }

}

model  Blog {
    fields {
        name Text?
    }
}
